|| Fixed spacing issue in 'how-does-it-work-container' and adjusted input character limit ||
Description:
- Resolved the spacing issue in the how-does-it-work-container, which was affected by the number of drawn numbers
- Updated the maximum character limit in inputs to 2

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -42,14 +42,16 @@ main {
     grid-template-areas:
       "header to-draw-and-result-container"
       "how-does-it-work to-draw-and-result-container";
+    grid-template-rows: 22.3rem;
 
     margin-top: 8.9rem;
     column-gap: 10%;
 
     & .how-does-it-work-container {
       grid-area: how-does-it-work;
-      bottom: 20%;
-      position: absolute;
+      margin-top: 3.8rem;
+      
+      align-self: self-start;
     }
 
     & #to-draw-container,
